jquery minified file

--- a/theWebDevBoot/jquery/intro.html
+++ b/theWebDevBoot/jquery/intro.html
@@ -2,9 +2,16 @@
 <html>
    <head>
       <meta charset="utf-8">
+          <script src="jquery-3.1.1.min.js" ></script>
       <title>jQuery: Web Dev Boot Camp</title>
    </head>
    <body>
+      <h1>jQuery Demo</h1>
 
+      <ul>
+         <li>newt</li>
+         <li>howler monckey</li>
+         <li id="adorable">pine martin</li>
+      </ul>
    </body>
 </html>
