--- a/theWebDevBoot/projects/colorpicker/colorgame.html
+++ b/theWebDevBoot/projects/colorpicker/colorgame.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>RGB GUESSING GAME</title>
+    <script src="jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +24,7 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
-    <script type="text/javascript" src="script.js">
+    <script type="text/javascript" src="jqscript.js">
 
     </script>
 </body>
