--- a/theWebDevBoot/projects/colorpicker/colorgame.html
+++ b/theWebDevBoot/projects/colorpicker/colorgame.html
@@ -13,8 +13,8 @@
    <div id="strip">
       <button id="reset">New Colors</button>
       <span id="message"></span>
-      <button class="mode">Easy</button>
-      <button class="selected mode">Hard</button>
+      <button value="easy" class="mode">Easy</button>
+      <button value="hard" class="selected mode">Hard</button>
    </div>
     <div class="container">
         <div class="square"></div>
